# online_chat_messanger

./: README.md
client/: Cargo.toml
client/src/: client_socket.rs  consts.rs  main.rs  prompts.rs  user_session.rs
server/: Cargo.toml
server/src/: chat_room.rs  chat_room_list.rs  chat_room_service.rs  main.rs  user_session.rs  user_session_list.rs
shared/: Cargo.toml
shared/src/: consts.rs  lib.rs
shared/src/network/: mod.rs  tcp_listener_wrapper.rs  tcp_stream_wrapper.rs  tokio_tcp_listener_wrapper.rs  tokio_tcp_stream_wrapper.rs
shared/src/protocol/: mod.rs  tcp_chat_room_packet.rs  udp_message_packet.rs  udp_session_start_packet.rs
shared/src/session/: user_session.rs
shared/src/socket/: client_socket.rs
shared/src/util/: mod.rs  slice_util.rs
shared/src/value_object/: chat_room_name.rs  message.rs  mod.rs  operation_payload.rs  operation_state.rs  operation_type.rs  response_status.rs  room_name.rs  socket_type.rs  user_name.rs  user_token.rs
