[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
enum-primitive-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
